# fgamma

./: CMakeLists.txt  FindYamlCpp.cmake  README.md  vis.mac
cluster/: batch.sh
models/: example.yml
scripts/: analyzemodel  convertsuncomp.py  measurejob.py  memwatch.py  time  time.py
src/: CutoffStackingAction.cc  CutoffStackingAction.hh  DetectorConstruction.cc  DetectorConstruction.hh  HDFTable.cc  HDFTable.hh  HDFWriter.cc  HDFWriter.hh  HistogrammingUserActions.cc  HistogrammingUserActions.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  Timer.cc  Timer.hh  TrackingLog.cc  TrackingLog.hh  UserActionManager.cc  UserActionManager.hh  UserEventInformation.cc  UserEventInformation.hh  configuration.cc  configuration.hh  main.cc
tests/: eventconf.cc  hdftable.cc  loadmodel.cc
tools/: analyzer.cc  mergeruns.cc  randomint.cc
